--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==2.2.1
 idna==2.8
 oauthlib==3.0.1
 PyJWT==1.7.1
+python-dotenv==0.10.2
 python3-openid==3.1.0
 pytz==2019.1
 requests==2.22.0
