--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,6 @@ social-auth-app-django==3.1.0
 social-auth-core==3.1.0
 sqlparse==0.3.0
 urllib3==1.25.2
+django-rest-framework-social-oauth2
+djangorestframework
+django-cors-headers
